src/corelib/kernel/qdeadlinetimer.cpp
@@ -39,7 +39,6 @@
 
 #include "qdeadlinetimer.h"
 #include "qdeadlinetimer_p.h"
-#include <qpair.h>
 
 QT_BEGIN_NAMESPACE
 
