src/corelib/kernel/qdeadlinetimer.h
@@ -43,6 +43,7 @@
 #include <QtCore/qelapsedtimer.h>
 #include <QtCore/qmetatype.h>
 #include <QtCore/qnamespace.h>
+#include <QtCore/qpair.h>
 
 #ifdef max
 // un-pollute the namespace. We need std::numeric_limits::max() and std::chrono::duration::max()
@@ -186,6 +187,10 @@ private:
     unsigned type;
 
     qint64 rawRemainingTimeNSecs() const Q_DECL_NOTHROW;
+
+public:
+    // This is not a public function, it's here only for Qt's internal convenience...
+    QPair<qint64, unsigned> _q_data() const { return qMakePair(t1, t2); }
 };
 
 Q_DECLARE_SHARED(QDeadlineTimer)
