src/corelib/thread/qmutex_p.h
@@ -58,6 +58,7 @@
 #include <QtCore/qnamespace.h>
 #include <QtCore/qmutex.h>
 #include <QtCore/qatomic.h>
+#include <QtCore/qdeadlinetimer.h>
 
 #if defined(Q_OS_MAC)
 # include <mach/semaphore.h>
@@ -146,7 +147,7 @@ public:
 // helper functions for qmutex_unix.cpp and qwaitcondition_unix.cpp
 // they are in qwaitcondition_unix.cpp actually
 void qt_initialize_pthread_cond(pthread_cond_t *cond, const char *where);
-void qt_abstime_for_timeout(struct timespec *ts, int timeout);
+void qt_abstime_for_timeout(struct timespec *ts, QDeadlineTimer deadline);
 #endif
 
 QT_END_NAMESPACE
